// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-noformat-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @noformat

    123

=====================================output=====================================
# @noformat

    123

================================================================================
`;

exports[`with-noprettier-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @noprettier

    123

=====================================output=====================================
# @noprettier

    123

================================================================================
`;

exports[`without-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


    123

=====================================output=====================================
123

================================================================================
`;
